# behavioral-risk-engine

./: .gitattributes  .gitignore  README.md  architecture.md  profiling.md  pyproject.toml  requirements.txt
data/processed/: transactions_engineered.csv
feature_pipeline/: pyproject.toml  requirements.txt
feature_pipeline/src/: benchmark.py  compare_impact.py  features_numba.py  features_pandas.py  reshape.py  rolling_baseline.py  run_feature_engineering.py  sync_offline.py  sync_online.py
feature_service/: Dockerfile  benchmark.go  go.mod  main.go
inference_service/: pyproject.toml  requirements.txt
infrastructure/: docker-compose.yml
model_training/: pyproject.toml  requirements.txt
model_training/src/: predict_realtime.py  run_experiment.py  train_lgbm.py
notebooks/: EDA_Credit-Risk-Dataset.ipynb
src/: benchmark.py  compare_impact.py  features_baseline.py  features_numba.py  features_pandas.py  monitoring.py  run_feature_engineering.py  utils.py
src/models/: run_experiment.py  train_lgbm.py  train_lr.py
tests/: test_features.py
