[project]
name = "model-training"
version = "0.1.0"
description = "Credit risk model training, evaluation, and stability audit"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "scikit-learn>=1.0.0",
    "lightgbm>=3.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "psycopg2-binary>=2.9.0",
]