[project]
name = "model-training"
version = "0.1.0"
description = "Credit risk model training, evaluation, and stability audit"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "scikit-learn>=1.0.2",
    "lightgbm>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.2.0"
]